--- a/_posts/2024-07-26-khuda-2nd.markdown
+++ b/_posts/2024-07-26-khuda-2nd.markdown
@@ -121,6 +121,7 @@ plt.ylabel('weight')
 plt.show()
 ```
 ![alt text](image.png)
+
 선형적인 그래프가 나온다.
 
 #### 손코딩 빙어 데이터 넣기
@@ -132,7 +133,9 @@ plt.ylabel('weight')
 plt.show()
 ```
 ![alt text](image-1.png)
+
 색이 구별되는 형태를 보여준다.
+
 빙어는 길이와 무게가 비례하지만 기울기가 다르다. 
     이는 도미가 길이에 따라 무게가 더 큰 영향을 받는다.
 
@@ -213,7 +216,9 @@ KNeighborsClassifier(n_neighbors=??)
 - 넘파이 : 파이썬의 array library
         사용하는 이유 : 리스트로는 2차원 표현 가능/ 고차원 리스트를 표현하기 어려움
     **Tip.** 표현하는 방법
+
     ![alt text](image-3.png)
+    
     ```python
     import numpy as np
     input_arr= np.array(fish_data)
@@ -270,7 +275,7 @@ predict 함수의 출력값은 numpy 배열형이다.
         3) 결과
             - [1,2,3,4,5,6]
 
-    ![ ㅎㅎㅎㅎㅎㅀㅎ ](image-5.png)
+    ![ 사진 ](image-5.png)
 
 - 원소 채우기
     1. np.ones(n) : 1이 n개 들어있는 배열 생성
@@ -335,6 +340,7 @@ plt.show()
         - np.mean() : 평균 계산
         - np.std() : 표준편차 계산
         - axis=0 : 행을 따라 각 열의 통계값을 계산
+
         ![alt text](image-6.png)
 
         ```python
