--- a/_posts/2024-08-01-khuda-3rd.markdown
+++ b/_posts/2024-08-01-khuda-3rd.markdown
@@ -10,9 +10,9 @@ categories: KhuDa
 # 03-1 k-최근접 이웃 회귀
 
 **문제 상황**
-목표 : 무게를 알아내야 한다. 
-사용 변수 : 무게를 제외한 길이, 높이, 두께
-방법 : 회귀
+- 목표 : 무게를 알아내야 한다. 
+- 사용 변수 : 무게를 제외한 길이, 높이, 두께
+- 방법 : 회귀
 
 ## 정의
 ### k-최근접 이웃 회귀
