--- a/_posts/2024-08-01-khuda-3rd.markdown
+++ b/_posts/2024-08-01-khuda-3rd.markdown
@@ -235,7 +235,7 @@ lr.predict([[50]])
     1) a, b : model parameter
     2) a : 계수(coefficient), 가중치(weight) 라고 부른다.
     3) b : bias
-    coef_, intercept_
+    - 구하는 함수 : coef_, intercept_
 
 나온 결과물을 산점도로 그리는 코드
 
