--- a/_posts/2024-08-26-khuda-6th.markdown
+++ b/_posts/2024-08-26-khuda-6th.markdown
@@ -215,6 +215,123 @@ centroid
 
 
 ## k-means clustering algorithm 이란?
+작동 방식
+1) 무작위 k개의 클러스터 중심을 정한다.
+2) 각 샘플에서 가장 가까운 클러스터 중심을 찾아 해당 클러스터의 샘플로 지정한다.
+3) 클러스터에 속한 샘플의 평균값으로 **클러스터 중심**을 변경
+4) 클러스터 중심에 변화가 없을때까지 2번으로 돌아가 반복
+
+
+- 랜덤하게 중심을 지정한다. 
+- 중심에서 가장 가까운 샘플들을 하나의 클러스터
+- 거기서 대부분의 클래스가 있는 샘플로 쪽으로 점을 이동시킨다.
+
+## KMeans class 사용
+!wget http://bit.ly/fruits_300 -O fruits_300.npy
+
+npy를 읽어 넘파일 배열을 준비한다.
+```python
+import numpy as np
+fruits = np.load('fruits_300.npy')
+fruits_2d = fruits.reshape(-1,100*100)
+```
+
+모델 가져오기
+```python
+from sklearn.cluster import KMeans
+km = KMeans(n_clusters=3, random_state=42)
+km.fit(fruits_2d)
+```
+
+클러스터의 군집 결과는 labels_ 속성에 저장된다. 이 길이는 샘플 개수로 각 샘플이 어떤 레이블에 해당하는지 나타낸다. n_clusters=3으로 지정했기에 labels_ 배열의 값은 0,1,2중 하나이다.
+
+```python
+print(km.labels_)
+
+print(np.unique(km.labels_, return_counts= True))
+# array([0,1,2], dtype=int32), array([91,98,111])
+# 레이블 0에는 91개 1에는 98개, 2에는 111개의 샘플이 모았다.
+```
+
+그림을 출력하는 함수
+```python
+import matplotlib as plt
+def draw_fruits(arr, ratio=1):
+    n=len(arr) # n = 샘플의 개수이다.
+    # 한 줄에 10개씩 이미지를 그린다. 샘플 개수를 10으로 나누어 전체 행 개수를 계산한다.
+    rows = int(np.ceil(n/10))
+    # 행이 1개이면 열의 개수는 샘플 개수입니다. 그렇지 않으면 10개이다.
+    cols = n if rows<2 else 10
+    fig, axs = plt.subplots(rows, cols, figsize=(cols*ratio, rows*ratio), squeeze= False)
+    for i in range(rows):
+        for j in range(cols):
+            if i*10 +j<n:
+                axs[i,j].imshow(arr[i*10+j], cmap='gray_r')
+            axs[i,j].axis('off')
+    plt.show()
+# 이 함수는 (샘플 개수, 너비, 높이)의 3차원 배열을 입력받아.
+# 가로로 10개씩 이미지를 출력한다.
+# 샘플 개수에 따라 행과 열의 개수를 계산하고 figsize를 지정합니다. ratio에 비례하여 커진다.
+# 2중 for문으로 첫번째 행을 따라 이미지를 그린다. 그리고 두번째 행의 이미지를 그리는 식으로 진행한다.
+
+```
+호출하는 방법 
+
+불리언 인덱싱을 이용한다.
+
+```python
+draw_fruits(fruits[km.labels_==0])
+```
+이에 대해 종종 오류가 나오는 모습을 보여주었지만 다들 좋은 결과를 도출해냈다.
+
+## 클러스터 중심
+KMeans 클래스에서 최종적으로 찾은 클러스터 중심은 **cluster_centers_** 속성에 저장되어 있다. 이 배열은 fruits_2d 샘플의 클러스터 중심이기 때문에 이미지로 출력하려면 100X100 크기의 2차원 배열로 바꿔야 한다.
+
+```python
+draw_fruits(km.cluster_centers_.reshape(-1,100,100),ratio=3)
+```
+
+KMeans 클래스에는 훈련 데이터 샘플에서 클러스터 중심까지 거리로 변환해주는 transfrom() 메서드를 가지고 있다. transform()메서드가 있다는 것은 마치 StandardScaler 클래스처럼 특성값을 변환하는 도구로 사용할 수 있다는 의미이다. 
+
+- 주의 : 인덱스가 100인 샘플에 transform() 메서드를 적용해 보죠. fit() 메서드와 마찬가지로 2차원 배열을 기대합니다. 
+    - fruits_2d[100]처럼 사용하면 에러가 발생한다. 슬라이싱 연산자를 사용해서 (1,10000) 크기의 배열을 전달해야 한다.
+```python
+print(km.trasform(fruites_2d[100:101]))
+# [[5267 8837 3393]]
+# 각각 0, 1, 2로 표현된다.
+print(km.predict(fruites_2d[100:101]))
+# 가장 가까운 [2]를 예측한다.
+```
+```python
+draw_fruits(fruits[100:101])
+# 파인애플 사진
+```
+```python
+print(km.n_iter_)
+# 3
+```
+
+## 최적의 k 찾기
+k를 찾기 위해 몇가지 도구가 있다.
+
+여기선 **엘보우** 방법을 살펴볼 것이다.
+
+- inertia(이너셔) : 거리의 제곱의 합
+    - 클래스의 개수가 늘어나면 클러스터 개객의 크기는 줄어들기 때문에 이너셔도 줄어든다.
+
+최적의 k를 찾는 방법
+```python
+inertia = []
+for k in range(2,7):
+    km = KMeans(n_clusters = k, random_state=42)
+    km.fit(fruits_2d)
+    inertia.append(km.inertia_)
+plt.plot(range(2,7),inertia)
+plt.show()
+```
+![alt text](image-60.png)
+
+# 06-3 주성분 분석
 
 ```python
 
