--- a/_posts/2024-08-26-khuda-6th.markdown
+++ b/_posts/2024-08-26-khuda-6th.markdown
@@ -332,6 +332,88 @@ plt.show()
 ![alt text](image-60.png)
 
 # 06-3 주성분 분석
+## intro
+k-평균 알고리즘으로 업로드된 사진을 클러스터로 분류하여 폴더별로 저장했다. 
+
+그래서 계속 업로드하는 방향으로 진행했다.
+
+여기서 발생한 문제는 저장공간이 부족했다.
+
+어떻게 하면 사진의 용량을 줄일 수 있을까?
+
+## 차원과 차원 축소
+이전의 우리는 데이터가 가진 속성을 **특성**이라 불렀다.
+
+과일 사진의 경우 10,000개의 픽셀이 있기에, 이는 10,000개의 특성이 있는 셈이다.
+
+머신러닝에서는 이런 특성을 **차원(dimension)**이라고 한다.
+![alt text](image-61.png)
+
+- **차원 축소 알고리즘이란?**
+    - 3장에선 특성이 많아지면, 성능과 함께 과적합이 된다.
+    - 차원축소는 데이터를 가장 잘 나타내는 일부 특성을 선택하여 데이터 크기를 줄이고, 지도 학습 모델의 성능을 향상시킬 수 있는 방법
+    - 이는 다시 복원도 가능하다.
+        - 예시 : 주성분 분석(PCA)
+## 주성분 분석 소개
+주성분이란? 
+
+데이터의 분산을 가장 잘 표현할 수 있는 벡터를 이르는 말이다.
+
+주성분의 벡터의 원소 개수 == 원본 데이터셋에 있는 특성 개수
+
+주성분으로 바꾼 데이터는 차원이 줄어든다.
+
+다음 주성분의 방향은 기존의 주성분과 수직이면서 분산이 가장 큰 방향이다.
+
+### PCA 클래스
+
+1) 데이터 가져오기
+!wget http://bit.ly/fruits_300 -O fruits_300.npy
+```python
+import numpy as np
+fruits = np.load('fruits_300.npy')
+fruits_2d = fruits.reshape(-1,100*100)
+```
+
+```python
+from sklearn.decomposition import PCA
+pca = PCA(n_components=50)
+pca.fit(fruits_2d)
+
+print(pca.components_.shape)
+#(50,10000)
+```
+PCA class
+
+n_components=50 : 첫번째 차원이 50이다. 
+
+    #(50,10000)
+
+    이는 50개의 주성분을 찾은 거다.
+
+    두번째 차원은 항상 원본 데이터의 특성 개수와 같은 10,000입니다.
+
+    이를 통해 가능한 것
+    
+    1. 데이터 이미지화
+```python
+draw_fruits(pca.components_.reshape(-1,100,100))
+```
+위의 코드로 100x100 사이즈인 50개의 이미지를 출력한다.
+
+**투영**
+
+이렇게 주성분을 찾았으니, 원본 데이터를 주성분에 투영하여 특성의 개수를 10,000개에서 50개로 줄일 수 있다. 
+
+이때의 함수는 transform() 메서드를 이용한다.
+
+```python
+print(fruits_2d.shape)
+# (300,10000)
+fruits_pca = pca.transform(fruits_2d)
+print(fruits_pca.shape)
+# (300,50)
+```
 
 ```python
 
